<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.ensoft.mob.waterbiller.EnumerationActivity">

    <EditText
        android:id="@+id/txt_meter_number"
        android:hint="@string/meter_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"

        />
    <EditText
        android:id="@+id/street_number"
        android:hint="@string/street"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        />

    <!--<FrameLayout
        android:id="@+id/camera_preview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" />-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imagePhoto"
        android:src="@drawable/camera_new"
        android:layout_margin="2dp"
        android:contentDescription="whitesquare"
        android:clickable="true"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="House Image"
        android:gravity="center" />

    <Button android:id="@+id/enumeration_button" style="?android:textAppearanceMedium"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="10dp" android:text="@string/submit_enumeration"
        android:textStyle="bold" />

</LinearLayout>
