<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".AuthorizationActivity">

    <!--<include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        ></include>-->

    <!-- Authorization progress -->
    <ProgressBar android:id="@+id/authorization_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <ScrollView android:id="@+id/authorize_form" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp">


        <LinearLayout
            android:id="@+id/email_auth_form"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"

            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView android:text="@string/authorization_comment" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                />

            <TextView
                android:id="@+id/auth_status"
                android:text="@string/authorization_status" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:visibility="gone"
                />

            <EditText
                android:id="@+id/txt_serviceid"
                android:hint="@string/hint_service_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/apptheme_edit_text_holo_light"
                />
            <AutoCompleteTextView android:id="@+id/auth_email" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:singleLine="true"
                android:background="@drawable/apptheme_edit_text_holo_light"/>

            <Button
                android:id="@+id/authorizeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/authorize_button"
                style="?android:textAppearanceMedium"
                android:layout_marginTop="10dp"/>

            <!--<Button android:id="@+id/moveButton" style="?android:textAppearanceMedium"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="3dp" android:text="Test Move"
                android:textStyle="bold" />-->
        </LinearLayout>
    </ScrollView>

    <!--<LinearLayout android:id="@+id/footer" android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:orientation="horizontal"
        android:layout_alignParentBottom="true" style="@android:style/ButtonBar"
        android:background="#666">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/footer_bar_text"
            android:id="@+id/copy_right"
            android:textColor="#fff"
            android:gravity="top|center"
            android:padding="10dp"
            />

    </LinearLayout>-->

</RelativeLayout>
