<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ensoft.mob.waterbiller.ProfileExistActivity">

    <ScrollView android:id="@+id/billing_form" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:hint="Profile Type"
        android:layout_marginTop="10dp"
        />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profileType"
        android:layout_marginBottom="5dp"
        android:textColor="@color/half_black"
        android:prompt="@string/mprofileType"
        android:paddingTop="0dp"
        android:paddingLeft="0dp"
        android:spinnerMode="dialog"
        android:paddingBottom="1dp"
        android:layout_weight="1.5"
        android:layout_gravity="left"
        android:gravity="left"
        style="@style/SpinnerAppTheme"
        />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="Area Name"
                android:layout_marginTop="10dp"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerAllActiveAreaCodes"
                android:layout_marginBottom="5dp"
                android:textColor="@color/half_black"
                android:prompt="@string/marealist"
                android:paddingTop="0dp"
                android:paddingLeft="0dp"
                android:spinnerMode="dialog"
                android:paddingBottom="1dp"
                android:layout_weight="1.5"
                android:layout_gravity="left"
                android:gravity="left"
                style="@style/SpinnerAppTheme"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="Street Name"
                android:layout_marginTop="10dp"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/streetList"
                android:layout_marginBottom="5dp"
                android:textColor="@color/half_black"
                android:prompt="@string/mstreetList"
                android:paddingTop="0dp"
                android:paddingLeft="0dp"
                android:spinnerMode="dialog"
                android:paddingBottom="1dp"
                android:layout_weight="1.5"
                android:layout_gravity="left"
                android:gravity="left"
                style="@style/SpinnerAppTheme"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="Building No"
                android:layout_marginTop="10dp"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buildingList"
                android:layout_marginBottom="5dp"
                android:textColor="@color/half_black"
                android:prompt="@string/mbuildingList"
                android:paddingTop="0dp"
                android:paddingLeft="0dp"
                android:spinnerMode="dialog"
                android:paddingBottom="1dp"
                android:layout_weight="1.5"
                android:layout_gravity="left"
                android:gravity="left"
                style="@style/SpinnerAppTheme"
                />
    <Button android:id="@+id/mSelectProfileType"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="Next"
        android:textStyle="bold" />
    </LinearLayout>
</ScrollView>
</RelativeLayout>
