<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ensoft.mob.waterbiller.ReportActivity">

    <ProgressBar android:id="@+id/authorization_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView android:id="@+id/billing_form" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <EditText
                    android:id="@+id/report_street_name"
                    android:hint="Street Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:editable="false"
                    />
                <EditText
                    android:id="@+id/report_building"
                    android:hint="House/Plot Number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:editable="false"
                    />

                <EditText
                    android:id="@+id/meter_number"
                    android:hint="@string/meter_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:editable="false"
                    />
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/report_reason"
                    android:layout_marginBottom="5dp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/report_comment"
                    android:hint="Comment/Description"
                    />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageMeterBilling"
                    android:src="@drawable/camera_new"
                    android:layout_margin="2dp"
                    android:contentDescription="whitesquare"
                    android:clickable="true" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Image"
                    android:gravity="center" />

                <Button android:id="@+id/report_button" style="?android:textAppearanceMedium"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" android:text="@string/submit_report"
                    android:textStyle="bold" />
            </LinearLayout>

        </ScrollView>
    </LinearLayout>
    <LinearLayout android:id="@+id/footer" android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:orientation="horizontal"
        android:layout_alignParentBottom="true" style="@android:style/ButtonBar"
        android:background="#666">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/footer_bar_text"
            android:id="@+id/copy_right"
            android:textColor="#fff"
            android:gravity="top|center"
            android:padding="10dp"
            />

    </LinearLayout>

</RelativeLayout>
